k8s/networkpolicy/30-ai/allow-ai-to-k8s-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ai-to-k8s-api
  namespace: bravo-ai-integration-ns
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 10.233.0.1/32
    ports:
    - protocol: TCP
      port: 443
