k8s/networkpolicy/30-ai/allow-ai-to-mongo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ai-to-mongo
  namespace: bravo-ai-integration-ns
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: bravo-mongo-ns
    ports:
    - protocol: TCP
      port: 27017
